--- a/src/backend/TruckControl.Application/TruckControl.Application.csproj
+++ b/src/backend/TruckControl.Application/TruckControl.Application.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
   </ItemGroup>
 
   <PropertyGroup>
